[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/sprites/connector.png" type="Texture" id=1]
[ext_resource path="res://scenes/WireConnector.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/connector_locked.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0

[node name="WireConnector" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -5, 0 )
rotation = 1.57079
texture = ExtResource( 1 )
offset = Vector2( 0, -8 )

[node name="Area2D" type="Area2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
position = Vector2( 1.12057e-05, -5 )
shape = SubResource( 1 )

[node name="Lock" type="Sprite" parent="."]
visible = false
position = Vector2( 3, 0 )
rotation = 1.5708
texture = ExtResource( 3 )

[connection signal="mouse_entered" from="Sprite/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Sprite/Area2D" to="." method="_on_Area2D_mouse_exited"]
